[tool.poetry]
name = "orgprofiler-server"
version = "0.1.0"
description = ""
authors = ["Villy15 <adrianvill07@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
scikit-image = "^0.25.2"
scipy = "^1.16.1"
loguru = "^0.7.3"
psutil = "^7.0.0"
supabase = "^2.19.0"
pydantic-settings = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
